--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
-title: Halve
-description: Stylish, Two-Column Jekyll Theme
-url: https://taylantatli.github.io/Halve
+title: Hunet-DataInnovation
+description: Hunet DataInnovationTeam Github blog
+url: https://hunet-datainnovation.github.io//Halve
 logo: halve.png                                       # Site logo
 locale: en_US
 
