--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title: Hunet-DataInnovation
 description: Hunet DataInnovationTeam Github blog
-url: https://hunet-datainnovation.github.io/halve
+url: https://hunet-datainnovation.github.io/
 logo: halve.png                                       # Site logo
 locale: en_US
 
@@ -12,7 +12,7 @@ background:
   default-post: images/unsplash-gallery-image-3.jpg   # this image will be shown when post's front matter doesn't specify any image
 
 # Jekyll
-permalink:          
+permalink:
 markdown:           kramdown
 highlighter:        rouge
 kramdown:
