--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Hunet-DataInnovation
 description: Hunet DataInnovation Team Technology Blog
 url: https://Hunet-DataInnovation.github.io/
-logo: halve.png                                       # Site logo
+logo: hunet.png                                       # Site logo
 locale: en_US
 
 # Left Block Images
